// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`basic 1`] = `
{
  "importStrings": [
    "import locale__47test_47srcDir_47en_46json from \\"../en.json\\" assert { type: \\"json\\" };",
    "import locale__47test_47srcDir_47ja_46json from \\"../ja.json\\" assert { type: \\"json\\" };",
    "import locale__47test_47srcDir_47fr_46json from \\"../fr.json\\" assert { type: \\"json\\" };",
  ],
  "localeMessages": [
    [
      "en",
      [
        {
          "cache": "true",
          "key": "\\"../en.json\\"",
          "load": "() => Promise.resolve(locale__47test_47srcDir_47en_46json)",
        },
      ],
    ],
    [
      "ja",
      [
        {
          "cache": "true",
          "key": "\\"../ja.json\\"",
          "load": "() => Promise.resolve(locale__47test_47srcDir_47ja_46json)",
        },
      ],
    ],
    [
      "fr",
      [
        {
          "cache": "true",
          "key": "\\"../fr.json\\"",
          "load": "() => Promise.resolve(locale__47test_47srcDir_47fr_46json)",
        },
      ],
    ],
  ],
  "nuxtI18nOptions": {
    "defaultLocale": "en",
    "lazy": false,
    "locales": [],
  },
  "vueI18nConfigs": [
    "() => import(\\"../i18n.config.ts?hash=bffaebcb&config=1\\" /* webpackChunkName: \\"i18n_46config_46ts_bffaebcb\\" */)",
  ],
}
`;

exports[`files with cache configuration 1`] = `
{
  "importStrings": [],
  "localeMessages": [
    [
      "en",
      [
        {
          "cache": "true",
          "key": "\\"../en.json\\"",
          "load": "() => import(\\"../en.json\\" /* webpackChunkName: \\"locale__47test_47srcDir_47en_46json\\" */)",
        },
      ],
    ],
    [
      "ja",
      [
        {
          "cache": "true",
          "key": "\\"../ja.json\\"",
          "load": "() => import(\\"../ja.json\\" /* webpackChunkName: \\"locale__47test_47srcDir_47ja_46json\\" */)",
        },
      ],
    ],
    [
      "fr",
      [
        {
          "cache": "true",
          "key": "\\"../fr.json\\"",
          "load": "() => import(\\"../fr.json\\" /* webpackChunkName: \\"locale__47test_47srcDir_47fr_46json\\" */)",
        },
      ],
    ],
    [
      "es",
      [
        {
          "cache": "false",
          "key": "\\"../es.json\\"",
          "load": "() => import(\\"../es.json\\" /* webpackChunkName: \\"locale__47test_47srcDir_47es_46json\\" */)",
        },
      ],
    ],
    [
      "es-AR",
      [
        {
          "cache": "false",
          "key": "\\"../es.json\\"",
          "load": "() => import(\\"../es.json\\" /* webpackChunkName: \\"locale__47test_47srcDir_47es_46json\\" */)",
        },
        {
          "cache": "true",
          "key": "\\"../es-AR.json\\"",
          "load": "() => import(\\"../es-AR.json\\" /* webpackChunkName: \\"locale__47test_47srcDir_47es_45AR_46json\\" */)",
        },
      ],
    ],
  ],
  "nuxtI18nOptions": {
    "defaultLocale": "en",
    "lazy": true,
    "locales": [],
  },
  "vueI18nConfigs": [
    "() => import(\\"../i18n.config.ts?hash=bffaebcb&config=1\\" /* webpackChunkName: \\"i18n_46config_46ts_bffaebcb\\" */)",
  ],
}
`;

exports[`lazy 1`] = `
{
  "importStrings": [],
  "localeMessages": [
    [
      "en",
      [
        {
          "cache": "true",
          "key": "\\"../en.json\\"",
          "load": "() => import(\\"../en.json\\" /* webpackChunkName: \\"locale__47test_47srcDir_47en_46json\\" */)",
        },
      ],
    ],
    [
      "ja",
      [
        {
          "cache": "true",
          "key": "\\"../ja.json\\"",
          "load": "() => import(\\"../ja.json\\" /* webpackChunkName: \\"locale__47test_47srcDir_47ja_46json\\" */)",
        },
      ],
    ],
    [
      "fr",
      [
        {
          "cache": "true",
          "key": "\\"../fr.json\\"",
          "load": "() => import(\\"../fr.json\\" /* webpackChunkName: \\"locale__47test_47srcDir_47fr_46json\\" */)",
        },
      ],
    ],
  ],
  "nuxtI18nOptions": {
    "defaultLocale": "en",
    "lazy": true,
    "locales": [],
  },
  "vueI18nConfigs": [
    "() => import(\\"../i18n.config.ts?hash=bffaebcb&config=1\\" /* webpackChunkName: \\"i18n_46config_46ts_bffaebcb\\" */)",
  ],
}
`;

exports[`locale file in nested 1`] = `
{
  "importStrings": [],
  "localeMessages": [
    [
      "en",
      [
        {
          "cache": "true",
          "key": "\\"../en/main.json\\"",
          "load": "() => import(\\"../en/main.json\\" /* webpackChunkName: \\"locale__47test_47srcDir_47en_47main_46json\\" */)",
        },
      ],
    ],
    [
      "ja",
      [
        {
          "cache": "true",
          "key": "\\"../ja/main.json\\"",
          "load": "() => import(\\"../ja/main.json\\" /* webpackChunkName: \\"locale__47test_47srcDir_47ja_47main_46json\\" */)",
        },
      ],
    ],
    [
      "fr",
      [
        {
          "cache": "true",
          "key": "\\"../fr/main.json\\"",
          "load": "() => import(\\"../fr/main.json\\" /* webpackChunkName: \\"locale__47test_47srcDir_47fr_47main_46json\\" */)",
        },
      ],
    ],
  ],
  "nuxtI18nOptions": {
    "defaultLocale": "en",
    "lazy": true,
    "locales": [],
  },
  "vueI18nConfigs": [
    "() => import(\\"../i18n.config.ts?hash=bffaebcb&config=1\\" /* webpackChunkName: \\"i18n_46config_46ts_bffaebcb\\" */)",
  ],
}
`;

exports[`multiple files 1`] = `
{
  "importStrings": [],
  "localeMessages": [
    [
      "en",
      [
        {
          "cache": "true",
          "key": "\\"../en.json\\"",
          "load": "() => import(\\"../en.json\\" /* webpackChunkName: \\"locale__47test_47srcDir_47en_46json\\" */)",
        },
      ],
    ],
    [
      "ja",
      [
        {
          "cache": "true",
          "key": "\\"../ja.json\\"",
          "load": "() => import(\\"../ja.json\\" /* webpackChunkName: \\"locale__47test_47srcDir_47ja_46json\\" */)",
        },
      ],
    ],
    [
      "fr",
      [
        {
          "cache": "true",
          "key": "\\"../fr.json\\"",
          "load": "() => import(\\"../fr.json\\" /* webpackChunkName: \\"locale__47test_47srcDir_47fr_46json\\" */)",
        },
      ],
    ],
    [
      "es",
      [
        {
          "cache": "true",
          "key": "\\"../es.json\\"",
          "load": "() => import(\\"../es.json\\" /* webpackChunkName: \\"locale__47test_47srcDir_47es_46json\\" */)",
        },
      ],
    ],
    [
      "es-AR",
      [
        {
          "cache": "true",
          "key": "\\"../es.json\\"",
          "load": "() => import(\\"../es.json\\" /* webpackChunkName: \\"locale__47test_47srcDir_47es_46json\\" */)",
        },
        {
          "cache": "true",
          "key": "\\"../es-AR.json\\"",
          "load": "() => import(\\"../es-AR.json\\" /* webpackChunkName: \\"locale__47test_47srcDir_47es_45AR_46json\\" */)",
        },
      ],
    ],
  ],
  "nuxtI18nOptions": {
    "defaultLocale": "en",
    "lazy": true,
    "locales": [],
  },
  "vueI18nConfigs": [
    "() => import(\\"../i18n.config.ts?hash=bffaebcb&config=1\\" /* webpackChunkName: \\"i18n_46config_46ts_bffaebcb\\" */)",
  ],
}
`;

exports[`toCode: function (arrow) 1`] = `
{
  "importStrings": [],
  "localeMessages": [],
  "nuxtI18nOptions": {
    "defaultLocale": "en",
    "lazy": false,
    "locales": [
      {
        "code": "en",
        "files": [
          "en.json",
        ],
        "paths": [
          "/path/to/en.json",
        ],
        "testFunc": [Function],
      },
      {
        "code": "ja",
        "files": [
          "ja.json",
        ],
        "paths": [
          "/path/to/ja.json",
        ],
        "testFunc": [Function],
      },
      {
        "code": "fr",
        "files": [
          "fr.json",
        ],
        "paths": [
          "/path/to/fr.json",
        ],
        "testFunc": [Function],
      },
    ],
  },
  "vueI18nConfigs": [
    "() => import(\\"../i18n.config.ts?hash=bffaebcb&config=1\\" /* webpackChunkName: \\"i18n_46config_46ts_bffaebcb\\" */)",
  ],
}
`;

exports[`toCode: function (named) 1`] = `
{
  "importStrings": [],
  "localeMessages": [],
  "nuxtI18nOptions": {
    "defaultLocale": "en",
    "lazy": false,
    "locales": [
      {
        "code": "en",
        "files": [
          "en.json",
        ],
        "paths": [
          "/path/to/en.json",
        ],
        "testFunc": [Function],
      },
      {
        "code": "ja",
        "files": [
          "ja.json",
        ],
        "paths": [
          "/path/to/ja.json",
        ],
        "testFunc": [Function],
      },
      {
        "code": "fr",
        "files": [
          "fr.json",
        ],
        "paths": [
          "/path/to/fr.json",
        ],
        "testFunc": [Function],
      },
    ],
  },
  "vueI18nConfigs": [
    "() => import(\\"../i18n.config.ts?hash=bffaebcb&config=1\\" /* webpackChunkName: \\"i18n_46config_46ts_bffaebcb\\" */)",
  ],
}
`;

exports[`vueI18n option 1`] = `
{
  "importStrings": [
    "import locale__47test_47srcDir_47en_46json from \\"../en.json\\" assert { type: \\"json\\" };",
    "import locale__47test_47srcDir_47ja_46json from \\"../ja.json\\" assert { type: \\"json\\" };",
    "import locale__47test_47srcDir_47fr_46json from \\"../fr.json\\" assert { type: \\"json\\" };",
  ],
  "localeMessages": [
    [
      "en",
      [
        {
          "cache": "true",
          "key": "\\"../en.json\\"",
          "load": "() => Promise.resolve(locale__47test_47srcDir_47en_46json)",
        },
      ],
    ],
    [
      "ja",
      [
        {
          "cache": "true",
          "key": "\\"../ja.json\\"",
          "load": "() => Promise.resolve(locale__47test_47srcDir_47ja_46json)",
        },
      ],
    ],
    [
      "fr",
      [
        {
          "cache": "true",
          "key": "\\"../fr.json\\"",
          "load": "() => Promise.resolve(locale__47test_47srcDir_47fr_46json)",
        },
      ],
    ],
  ],
  "nuxtI18nOptions": {
    "lazy": false,
    "locales": [],
    "vueI18n": "vue-i18n.config.ts",
  },
  "vueI18nConfigs": [
    "() => import(\\"../foo/layer2/vue-i18n.options.js?hash=475488e5&config=1\\" /* webpackChunkName: \\"vue_45i18n_46options_46js_475488e5\\" */)",
    "() => import(\\"../layer1/i18n.custom.ts?hash=0ca697e2&config=1\\" /* webpackChunkName: \\"i18n_46custom_46ts_0ca697e2\\" */)",
    "() => import(\\"../to/i18n.config.ts?hash=fb1304e8&config=1\\" /* webpackChunkName: \\"i18n_46config_46ts_fb1304e8\\" */)",
  ],
}
`;
